kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: eco-service
spec:
  selector:
    app: eco-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
